Add missing documentation tags
