# cmd/server/handler/seller.go
@@ -21,8 +21,10 @@ func NewSeller(s seller.Service) *Seller {
 }
 
 // GetAll retrieves all sellers.
+//
 //	@Summary		Get all sellers
 //	@Description	Retrieves all sellers
+//	@Tags			Sellers
 //	@Produce		json
 //	@Success		200	{array}	domain.Seller	"Successfully retrieved sellers"
 //	@Success		204	"No Content"
@@ -43,9 +45,11 @@ func (s *Seller) GetAll() gin.HandlerFunc {
 }
 
 // GetById retrieves a seller by ID.
+//
 //	@Summary		Get a seller by ID
 //	@Description	Retrieves a seller based on the provided ID
 //	@Produce		json
+//	@Tags			Sellers
 //	@Param			id	path		int					true	"Seller ID"
 //	@Success		200	{object}	domain.Seller		"Successfully retrieved seller"
 //	@Failure		400	{object}	web.errorResponse	"Bad Request"
@@ -68,11 +72,13 @@ func (s *Seller) GetById() gin.HandlerFunc {
 }
 
 // Create creates a new seller.
+//
 //	@Summary		Create a new seller
 //	@Description	Creates a new seller with the provided data
 //	@Accept			json
 //	@Produce		json
 //	@Param			seller	body		domain.Seller		true	"Seller object"
+//	@Tags			Sellers
 //	@Success		201		{object}	domain.Seller		"Successfully created seller"
 //	@Failure		404		{object}	web.errorResponse	"Not Found"
 //	@Failure		422		{object}	web.errorResponse	"Unprocessable Entity"
@@ -115,12 +121,14 @@ func (s *Seller) Create() gin.HandlerFunc {
 }
 
 // Update updates an existing seller.
+//
 //	@Summary		Update an existing seller
 //	@Description	Updates an existing seller with the provided data
 //	@Accept			json
 //	@Produce		json
 //	@Param			id		path		int					true	"Seller ID"
 //	@Param			seller	body		domain.Seller		true	"Seller object"
+//	@Tags			Sellers
 //	@Success		200		{object}	domain.Seller		"Successfully updated seller"
 //	@Failure		400		{object}	web.errorResponse	"Bad Request"
 //	@Failure		404		{object}	web.errorResponse	"Not Found"
@@ -148,9 +156,11 @@ func (s *Seller) Update() gin.HandlerFunc {
 }
 
 // Delete deletes a seller by ID.
+//
 //	@Summary		Delete a seller by ID
 //	@Description	Deletes a seller based on the provided ID
 //	@Param			id	path	int	true	"Seller ID"
+//	@Tags			Sellers
 //	@Success		204	"No Content"
 //	@Failure		400	{object}	web.errorResponse	"Bad Request"
 //	@Failure		404	{object}	web.errorResponse	"Not Found"
